# argus

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  cli-release.yml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: client.rs  format.rs  main.rs
cli/src/commands/: agent.rs  doctor.rs  missions.rs  mod.rs  schedules.rs  triggers.rs
relay/: .env.example  package-lock.json  package.json  tsconfig.json
relay/src/: agent-json.ts  agent.ts  delivery.ts  events.ts  index.ts  mission-engine.ts  missions-seed.ts  missions.ts  scheduler.ts  tunnel.ts
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: activity-row.tsx  agent-setup-card.tsx  app-sidebar.tsx  argus-logo.tsx  argus-orb.tsx  command-palette.tsx  decision-card.tsx  github-connector-setup-card.tsx  mission-engine-card.tsx  provider-glyph.tsx  schedule-sheet.tsx  startup-experience.tsx  trigger-sheet.tsx
src/hooks/: use-agent-setup.ts  use-github-connector-setup.ts
src/lib/: app-shell-data.ts  app-shell-data.tsx  channel-catalog.ts  github-integration.ts  integration-catalog.ts  relay-api.ts  relay-events.ts  schedule-utils.ts
src/pages/: about-page.tsx  activity-page.tsx  agents-page.tsx  channel-detail-page.tsx  channels-page.tsx  insights-page.tsx  integration-detail-page.tsx  integrations-page.tsx  mission-detail-page.tsx  schedule-detail-page.tsx  (+3 more)
(+11 files in other folders)
