[package]
name = "argus-cli"
version = "0.1.0"
description = "Command-line interface for Argus"
authors = ["Argus"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
owo-colors = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "z"
